# DNSGuard

./: .gitignore  README.md  main.py  pyproject.toml
src/dnsguard/: __init__.py  dnsguard.py  main.py
