[project]
name = "dnsguard"
version = "0.1.0"
description = "Fuck Apple"
readme = "README.md"
requires-python = ">=3.11.10"
dependencies = [
    "ordered-set>=4.1.0",
    "pyobjc-core>=12.1",
    "pyobjc-framework-libdispatch>=12.1",
    "pyobjc-framework-systemconfiguration>=12.1",
    "typer>=0.25.1",
]

[project.scripts]
dnsguard = "dnsguard.main:app"

[build-system]
requires = ["uv_build>=0.11.12,<0.12.0"]
build-backend = "uv_build"
